# streamdeck-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
docs/: quickstart.md  schema.md
fixtures/: sanitize.py
fixtures/real-profile/ProfilesV3/92B4842D-F21D-422E-B181-3733A63927AE.sdProfile/: manifest.json
fixtures/real-profile/ProfilesV3/92B4842D-F21D-422E-B181-3733A63927AE.sdProfile/Profiles/197DB819-FEE9-4D79-8885-AD75AE8F1874/: manifest.json
fixtures/real-profile/ProfilesV3/92B4842D-F21D-422E-B181-3733A63927AE.sdProfile/Profiles/8DBCFF3D-E4D6-45EE-881D-1ED8016C300B/: manifest.json
fixtures/real-profile/ProfilesV3/92B4842D-F21D-422E-B181-3733A63927AE.sdProfile/Profiles/C3131E37-3D49-4735-953A-FE3785D94A59/: manifest.json
fixtures/real-profile/ProfilesV3/92B4842D-F21D-422E-B181-3733A63927AE.sdProfile/Profiles/C7D1645D-1CE8-47BC-BF5D-974252981FFF/: manifest.json
fixtures/real-profile/ProfilesV3/92B4842D-F21D-422E-B181-3733A63927AE.sdProfile/Profiles/EDCEDA95-5E88-4149-9E43-C2716B88EC05/: manifest.json
fixtures/real-profile/ProfilesV3/92B4842D-F21D-422E-B181-3733A63927AE.sdProfile/Profiles/FF56CDD9-5CA7-4E39-927D-2390318B62F7/: manifest.json
fixtures/real-profile/ProfilesV3/DD147925-8B13-A05A-AE32-25AAFD02ED18.sdProfile/: manifest.json
fixtures/real-profile/ProfilesV3/DD147925-8B13-A05A-AE32-25AAFD02ED18.sdProfile/Profiles/5B677B35-81BF-834D-64BD-6CC2CD273235/: manifest.json
fixtures/real-profile/ProfilesV3/DD147925-8B13-A05A-AE32-25AAFD02ED18.sdProfile/Profiles/85375AAE-DF9F-AB29-A1E4-EE91909B4742/: manifest.json
fixtures/real-profile/ProfilesV3/DD147925-8B13-A05A-AE32-25AAFD02ED18.sdProfile/Profiles/965EA614-8106-C974-4277-73EC7901357A/: manifest.json
fixtures/real-profile/ProfilesV3/DD147925-8B13-A05A-AE32-25AAFD02ED18.sdProfile/Profiles/ABE23767-B7E5-62B5-C463-F3D5D64CB922/: manifest.json
fixtures/real-profile/ProfilesV3/DD147925-8B13-A05A-AE32-25AAFD02ED18.sdProfile/Profiles/C9A9D670-CC27-18DE-6C59-41143AD203F6/: manifest.json
fixtures/real-profile/ProfilesV3/DD147925-8B13-A05A-AE32-25AAFD02ED18.sdProfile/Profiles/E3B4A4C1-F629-88D7-DCE5-CE8C672C96FB/: manifest.json
src/streamdeck_cli/: __init__.py  cli.py  icons.py  listing.py  manifest.py  mcp_server.py  paths.py  profile_io.py  validate.py  writes.py  yaml_pages.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_new_features.py  test_cli_set_icon.py  test_icons.py  test_listing.py  test_manifest.py  test_mcp_server.py  test_paths.py  test_profile_io.py  test_validate.py  test_writes.py  test_yaml_pages.py
