[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "streamdeck-cli"
version = "0.1.0"
description = "Manage Elgato Stream Deck profiles, pages, and actions from the command line"
readme = "README.md"
license = "MIT"
authors = [{ name = "Tyler Delano", email = "tyler.delano@icloud.com" }]
requires-python = ">=3.10"
keywords = ["elgato", "stream-deck", "cli", "automation", "profiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "hatchling>=1.18",
    "types-PyYAML>=6.0",
]

[project.scripts]
streamdeck = "streamdeck_cli.cli:main"
streamdeck-mcp = "streamdeck_cli.mcp_server:main"

[project.urls]
Homepage = "https://github.com/tylerdotai/streamdeck-cli"
Issues = "https://github.com/tylerdotai/streamdeck-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/streamdeck_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/streamdeck_cli"]

[[tool.mypy.overrides]]
# mcp (the Model Context Protocol SDK) ships no type stubs and is still pre-1.0
# in its type surface. Relax strict checking for the MCP wrapper only.
module = ["streamdeck_cli.mcp_server"]
strict = false
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires a real Stream Deck installation (skipped by default)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/streamdeck_cli"]
branch = true
